--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,27 @@
-@import url(https://db.onlinewebfonts.com/c/757ff6da05e4f945c71c9751b485a9ad?family=Aeonik+Medium);
-@import url(https://db.onlinewebfonts.com/c/d95bf2f30035a050142565e03d44da71?family=Aeonik);
+/* @import url(https://db.onlinewebfonts.com/c/757ff6da05e4f945c71c9751b485a9ad?family=Aeonik+Medium); */
+/* @import url(https://db.onlinewebfonts.com/c/d95bf2f30035a050142565e03d44da71?family=Aeonik); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* 
+
 @font-face {
-  font-family: 'aeonik';
+  font-family: 'Aeonik';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(./fonts/Aeonik.ttf) format('ttf');
+  src: url(./fonts/Aeonik.ttf);
 }
 
 
 
-@font-face {
+/* @font-face {
   font-family: "Aeonik Medium";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   src: url(./fonts/Aeonik\ Medium.ttf) format('ttf');
-} */
+}  */
 
 
 
